# Rayzek

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes_alerts.py  routes_connections.py  routes_core.py  routes_destinations.py  routes_export.py  routes_history.py  routes_processes.py  serializers.py
backend/app/collectors/: base.py  demo_source.py  system_source.py
backend/app/core/: config.py  logging_config.py  runtime.py
backend/app/database/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: alerts.py  collector.py  enrichment.py  geo_provider.py  risk.py  store.py
backend/app/utils/: netutils.py
backend/app/websocket/: hub.py  routes.py
backend/tests/: conftest.py  test_alerts.py  test_api.py  test_collector.py  test_enrichment.py  test_netutils.py  test_risk.py
desktop/: build-installer.ps1  build.ps1  install-autostart.ps1  make_icon.py  rayzek.spec  rayzek_app.py  requirements-desktop.txt  uninstall-autostart.ps1
desktop/installer/: rayzek.iss
docs/: ARCHITECTURE.md  PRIVACY.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queries.ts
frontend/src/components/: ErrorBoundary.tsx  Onboarding.tsx
frontend/src/pages/: MapPage.tsx  (+10 more)
scripts/: demo.ps1  demo.sh  format.sh  reset-db.ps1  reset-db.sh  start-dev.ps1  start-dev.sh  test.sh
(+23 files in other folders)
