[project]
name = "rayzek-backend"
version = "0.1.0"
description = "Rayzek backend — local network visibility dashboard"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls in Depends() defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # env setup before imports in conftest
